--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Home</title>
 </head>
+
 <body>
-    <form class="p-3 text-center" action="/", method="post" enctype="multipart/form-data">
-        <input class="form-control" type="file" name="imagefile">
-        <input class="btn btn-primary mt-3" type="submit" value="Extract Text">
-    </form>
-    {% if prediction %}
-        <p>Text in image : {{prediction}}</p>
-    {% endif %}
+    <nav class="navbar sticky-top navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Optical Character Recognition (OCR)</a>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h1>Upload Image</h1>
+                <form class="p-3 text-center" action="/" , method="post" enctype="multipart/form-data">
+                    <input class="form-control" type="file" name="imagefile">
+                    <input class="btn btn-primary mt-3" type="submit" value="Extract Text">
+                </form>
+            </div>
+
+            <div class="col-md-8">
+                {% if prediction %}
+                <h2>Text Present in Image:</h2>
+                <p>{{prediction}}</p>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
