--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,28 @@
     <title>Home</title>
 </head>
 <body>
-    <form class="p-3 text-center" action="/", method="post" enctype="multipart/form-data">
-        <input class="form-control" type="file" name="imagefile">
-        <input class="btn btn-primary mt-3" type="submit" value="Extract Text">
-    </form>
-    {% if prediction %}
-        <p>Text in image : {{prediction}}</p>
-    {% endif %}
+    <nav class="navbar sticky-top navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Optical Character Recognition (OCR)</a>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h1>Upload Image</h1>
+                <form class="p-3 text-center" action="/" , method="post" enctype="multipart/form-data">
+                    <input class="form-control" type="file" name="imagefile">
+                    <input class="btn btn-primary mt-3" type="submit" value="Extract Text">
+                </form>
+            </div>
+
+            <div class="col-md-8">
+                {% if prediction %}
+                <h2>Text Present in Image:</h2>
+                <p>{{prediction}}</p>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 </body>
 </html>
