--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styleindex.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="indexstyle.css" rel="stylesheet">
     <title>Home</title>
 </head>
 
-<body>
+<body id="b">
     <nav class="navbar sticky-top navbar-custom">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Optical Character Recognition (OCR)</a>
@@ -22,8 +22,8 @@
             <div class="col-md-4">
                 <h1>Upload Image</h1>
                 <form class="p-3 text-center" action="/" , method="post" enctype="multipart/form-data">
-                    <input class="form-control" type="file" name="imagefile">
-                    <input class="btn btn-primary mt-3" type="submit" value="Extract Text">
+                    <input id="form" class="form-control" type="file" name="imagefile">
+                    <input id="button" class="btn mt-3 btn-custom" type="submit" value="Extract Text">
                 </form>
             </div>
 
